package academy.mindswap.sims.utils;

public class Messages {

    public final static String YOU_NEED_A_HOUSE="You need a house to do actions";
    public final static String YOU_BOUGHT_A_HOUSE="You have just bought a house... Add some rooms";
    public final static String CANT_BUY_MORE_THAN_ONE_HOUSE="Your Sims can't buy more than one house";
    public final static String ROOM_DOES_NOT_EXISTS="Hum... it seems that you're trying to move to a non existing room.";
    public final static String YOU_ADDED_ROOM="You have just added a room %s to your house.\n";
    public final static String YOU_ARE_NOW_IN_ROOM="You have just moved to %s\n";
    public final static String YOU_HAVE_NO_ENERGY="You have no energy to do %s action. Try another action...\n";
    public final static String YOU_HAVE_A_FULL_BLADDER="You have a full bladder. Use toilet...\n";
    public final static String HOUSE_IS_TOO_DIRTY="Your house is too dirty. You need to clean it first\n";
    public final static String YOU_NEED_A_ROOM="You need to be inside of a room of the house to do an action";
    public final static String YOU_CANT_DO_ACTION_ON_ROOM="You can't do action %s on room %s\n";
    public final static String YOU_DID_ACTION_ON_ROOM="You did %s action on room %s\n";
    public final static String MAID_NEEDS_PAYMENT_FIRST="You've paid %.2f but You need to pay %.2f to the maid before cleaning the house\n";



}
