@startuml

title __SIMS's Class Diagram__\n

  namespace academy.mindswap {
    class academy.mindswap.Main {
    }
  }
  

  namespace academy.mindswap {
    namespace sims {
      class academy.mindswap.sims.Sims {
      }
    }
  }
  

  namespace academy.mindswap {
    namespace sims {
      enum SimsRoomsActions {
      }
    }
  }
  

  namespace academy.mindswap {
    namespace sims {
      namespace exceptions {
        class academy.mindswap.sims.exceptions.CantBuyMoreThanOneHouseException {
        }
      }
    }
  }
  

  namespace academy.mindswap {
    namespace sims {
      namespace exceptions {
        class academy.mindswap.sims.exceptions.FullBladderException {
        }
      }
    }
  }
  

  namespace academy.mindswap {
    namespace sims {
      namespace exceptions {
        class academy.mindswap.sims.exceptions.HouseIsTooDirtyException {
        }
      }
    }
  }
  

  namespace academy.mindswap {
    namespace sims {
      namespace exceptions {
        class academy.mindswap.sims.exceptions.MaidNotEnoughPaymentException {
        }
      }
    }
  }
  

  namespace academy.mindswap {
    namespace sims {
      namespace exceptions {
        class academy.mindswap.sims.exceptions.NoEnergyException {
        }
      }
    }
  }
  

  namespace academy.mindswap {
    namespace sims {
      namespace exceptions {
        class academy.mindswap.sims.exceptions.RoomDoesNotExistsException {
        }
      }
    }
  }
  

  namespace academy.mindswap {
    namespace sims {
      namespace exceptions {
        abstract class academy.mindswap.sims.exceptions.SimsExceptions {
        }
      }
    }
  }
  

  namespace academy.mindswap {
    namespace sims {
      namespace exceptions {
        class academy.mindswap.sims.exceptions.YouCantDoActionOnRoomException {
        }
      }
    }
  }
  

  namespace academy.mindswap {
    namespace sims {
      namespace exceptions {
        class academy.mindswap.sims.exceptions.YouNeedAHouseException {
        }
      }
    }
  }
  

  namespace academy.mindswap {
    namespace sims {
      namespace exceptions {
        class academy.mindswap.sims.exceptions.YouNeedARoomException {
        }
      }
    }
  }
  

  namespace academy.mindswap {
    namespace sims {
      namespace house {
        class academy.mindswap.sims.house.House {
        }
      }
    }
  }
  

  namespace academy.mindswap {
    namespace sims {
      namespace house {
        class academy.mindswap.sims.house.Maid {
        }
      }
    }
  }
  

  namespace academy.mindswap {
    namespace sims {
      namespace house {
        class academy.mindswap.sims.house.Room {
        }
      }
    }
  }
  

  namespace academy.mindswap {
    namespace sims {
      namespace house {
        enum RoomType {
        }
      }
    }
  }
  

  namespace academy.mindswap {
    namespace sims {
      namespace utils {
        class academy.mindswap.sims.utils.Messages {
        }
      }
    }
  }
  

  academy.mindswap.sims.Sims o-- academy.mindswap.sims.house.Room : actualRoom
  academy.mindswap.sims.Sims o-- academy.mindswap.sims.house.House : house
  academy.mindswap.sims.exceptions.CantBuyMoreThanOneHouseException -up-|> academy.mindswap.sims.exceptions.SimsExceptions
  academy.mindswap.sims.exceptions.FullBladderException -up-|> academy.mindswap.sims.exceptions.SimsExceptions
  academy.mindswap.sims.exceptions.HouseIsTooDirtyException -up-|> academy.mindswap.sims.exceptions.SimsExceptions
  academy.mindswap.sims.exceptions.MaidNotEnoughPaymentException -up-|> academy.mindswap.sims.exceptions.SimsExceptions
  academy.mindswap.sims.exceptions.NoEnergyException -up-|> academy.mindswap.sims.exceptions.SimsExceptions
  academy.mindswap.sims.exceptions.RoomDoesNotExistsException -up-|> academy.mindswap.sims.exceptions.SimsExceptions
  academy.mindswap.sims.exceptions.YouCantDoActionOnRoomException -up-|> academy.mindswap.sims.exceptions.SimsExceptions
  academy.mindswap.sims.exceptions.YouNeedAHouseException -up-|> academy.mindswap.sims.exceptions.SimsExceptions
  academy.mindswap.sims.exceptions.YouNeedARoomException -up-|> academy.mindswap.sims.exceptions.SimsExceptions
  academy.mindswap.sims.house.House .up.|> java.lang.Iterable
  academy.mindswap.sims.house.Room o-- academy.mindswap.sims.house.RoomType : roomType


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
